hphp/hack/test/typecheck/reactive/mutable_return_ft_in_rx2.php.like_types.exp
File "mutable_return_ft_in_rx2.php", line 10, characters 28-37:
`OwnedMutable` is the only mutability related hint allowed in return type annotation for reactive function types. (Naming[2099])
File "mutable_return_ft_in_rx2.php", line 11, characters 8-27:
Single argument to `\HH\Rx\mutable` should be an expression that yields new mutably-owned value, like `new A()`, Hack collection literal or `f()` where `f` is function annotated with `<<__MutableReturn>>` attribute. (Typing[4243])
